--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="com.tombarrasso.android.signaldetector"
-      android:versionCode="1"
-      android:versionName="1.0">
+      package="com.lordsutch.android.signaldetector"
+      android:versionCode="2"
+      android:versionName="1.1">
       
 	<uses-feature android:name="android.hardware.touchscreen" android:required="false" />
     <uses-feature android:name="android.hardware.location" android:required="false" />
@@ -14,11 +14,12 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" android:required="false" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" android:required="false" />
     
-    <uses-sdk android:minSdkVersion="7" android:targetSdkVersion="14" />
+    <uses-sdk android:minSdkVersion="16" android:targetSdkVersion="17" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_UPDATES"/>
       
     <application android:icon="@drawable/icon"
     			 android:logo="@drawable/icon"
-    			 android:label="@string/app_name">
+    			 android:label="@string/app_name" android:allowBackup="true">
         <activity android:name="HomeActivity"
                   android:label="@string/app_name"
                   android:noHistory="true">
