--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -9,13 +9,12 @@
 	<uses-feature android:name="android.hardware.location.network" android:required="false" />
 	<uses-feature android:name="android.hardware.location.gps" android:required="false" />
     <uses-feature android:name="android.hardware.telephony" android:required="false" />
-    
-    <uses-permission android:name="android.permission.ACCESS_WIMAX_STATE" android:required="false" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" android:required="false" />
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" android:required="false" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" android:required="false" />
     
     <uses-sdk android:minSdkVersion="16" android:targetSdkVersion="17" />
-    <uses-permission android:name="android.permission.ACCESS_COARSE_UPDATES"/>
+    <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
       
     <application android:icon="@drawable/icon"
     			 android:logo="@drawable/icon"
