--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="com.lordsutch.android.signaldetector"
       android:versionCode="2"
-      android:versionName="1.1">
+      android:versionName="1.2">
       
 	<uses-feature android:name="android.hardware.touchscreen" android:required="false" />
     <uses-feature android:name="android.hardware.location" android:required="false" />
@@ -10,16 +10,17 @@
 	<uses-feature android:name="android.hardware.location.gps" android:required="false" />
     <uses-feature android:name="android.hardware.telephony" android:required="false" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" android:required="false" />
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" android:required="false" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
     
     <uses-sdk android:minSdkVersion="14" android:targetSdkVersion="17" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
       
     <application android:icon="@drawable/icon"
     			 android:logo="@drawable/icon"
-    			 android:label="@string/app_name" android:allowBackup="true">
+    			 android:label="@string/app_name" android:allowBackup="true" android:hardwareAccelerated="true">
         <activity android:name="HomeActivity"
                   android:label="@string/app_name"
                   android:noHistory="true">
