--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,13 +3,7 @@
       package="com.lordsutch.android.signaldetector"
       android:versionCode="2"
       android:versionName="1.2">
-      
-	<uses-feature android:name="android.hardware.touchscreen" android:required="false" />
-    <uses-feature android:name="android.hardware.location" android:required="false" />
-	<uses-feature android:name="android.hardware.location.network" android:required="false" />
-	<uses-feature android:name="android.hardware.location.gps" android:required="false" />
-    <uses-feature android:name="android.hardware.telephony" android:required="false" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" android:required="false" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
     
     <uses-sdk android:minSdkVersion="16" android:targetSdkVersion="17" />
@@ -17,6 +11,7 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-feature android:required="false" android:name="android.hardware.touchscreen"/>
       
     <application android:icon="@drawable/icon"
     			 android:logo="@drawable/icon"
