--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,28 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="com.lordsutch.android.signaldetector"
-      android:versionCode="2"
-      android:versionName="1.2">
+<manifest package="com.lordsutch.android.signaldetector"
+    android:versionCode="2"
+    android:versionName="1.2" xmlns:android="http://schemas.android.com/apk/res/android">
+
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
-    
-    <uses-sdk android:minSdkVersion="16" android:targetSdkVersion="17" />
-    <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-feature android:required="false" android:name="android.hardware.touchscreen"/>
-      
-    <application android:icon="@drawable/icon"
-    			 android:logo="@drawable/icon"
-    			 android:label="@string/app_name" android:allowBackup="true" android:hardwareAccelerated="true">
-        <activity android:name="HomeActivity"
-                  android:label="@string/app_name"
-                  android:noHistory="true">
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+
+    <uses-sdk
+        android:minSdkVersion="16"
+        android:targetSdkVersion="17" />
+
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+
+    <uses-feature
+        android:name="android.hardware.touchscreen"
+        android:required="false" />
+
+    <application
+        android:allowBackup="true"
+        android:hardwareAccelerated="true"
+        android:icon="@drawable/ic_launcher"
+        android:label="@string/app_name"
+        android:logo="@drawable/ic_launcher" >
+        <activity
+            android:name="com.lordsutch.android.signaldetector.HomeActivity"
+            android:label="@string/app_name"
+            android:noHistory="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <service
+            android:name="com.lordsutch.android.signaldetector.SignalDetectorService"
+            android:enabled="true"
+            android:exported="false" >
+        </service>
     </application>
-</manifest> 
+
+</manifest>
