--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -30,8 +30,7 @@
         android:logo="@drawable/ic_launcher" >
         <activity
             android:name="com.lordsutch.android.signaldetector.SignalDetector"
-            android:label="@string/app_name"
-            android:noHistory="true" >
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -39,7 +38,12 @@
                 <category android:name="android.intent.category.MULTIWINDOW_LAUNCHER" />
             </intent-filter>
         </activity>
-
+        
+        <activity
+            android:name=".SettingsActivity"
+            android:label="@string/title_activity_settings" android:parentActivityName=".SignalDetector">
+        </activity>
+        
         <service
             android:name="SignalDetectorService"
             android:enabled="true"
@@ -67,14 +71,6 @@
             android:name="com.sec.android.multiwindow.MINIMUM_SIZE_H"
             android:value="598.0dip" />
 
-        <activity
-            android:name="com.lordsutch.android.signaldetector.SettingsActivity"
-            android:label="@string/title_activity_settings"
-            android:parentActivityName="com.lordsutch.android.signaldetector.SignalDetector" >
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.lordsutch.android.signaldetector.HomeActivity" />
-        </activity>
     </application>
 
 </manifest>
