--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -30,7 +30,7 @@
         android:logo="@drawable/ic_launcher" >
         <activity
             android:name="com.lordsutch.android.signaldetector.SignalDetector"
-            android:label="@string/app_name">
+            android:label="@string/app_name" android:launchMode="singleTask">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -41,7 +41,7 @@
         
         <activity
             android:name=".SettingsActivity"
-            android:label="@string/title_activity_settings" android:parentActivityName=".SignalDetector">
+            android:label="@string/title_activity_settings" android:parentActivityName="com.lordsutch.android.signaldetector.SignalDetector">
         </activity>
         
         <service
