--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -23,7 +23,6 @@
 
     <application
         android:allowBackup="true"
-        android:hardwareAccelerated="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:logo="@drawable/ic_launcher" >
@@ -40,7 +39,8 @@
         
         <activity
             android:name=".SettingsActivity"
-            android:label="@string/title_activity_settings" android:parentActivityName="com.lordsutch.android.signaldetector.SignalDetector">
+            android:label="@string/title_activity_settings"
+            android:parentActivityName="com.lordsutch.android.signaldetector.SignalDetector">
         </activity>
         
         <service
