--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -16,14 +16,13 @@
         android:name="android.hardware.touchscreen"
         android:required="false" />
 
-    <uses-feature android:name="android.software.webview"
-        android:required="true" />
+    <!--<uses-feature android:name="android.software.webview" android:required="true" />-->
 
     <application
+        android:theme="@style/Theme.SignalDetectorTheme"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name"
-        android:logo="@drawable/ic_launcher" >
+        android:label="@string/app_name" >
         <activity
             android:name="com.lordsutch.android.signaldetector.SignalDetector"
             android:label="@string/app_name" android:launchMode="singleTask">
