--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:1.3.0'
+        classpath 'com.android.tools.build:gradle:1.5.0'
     }
 }
 apply plugin: 'com.android.application'
@@ -19,12 +19,17 @@ dependencies {
 //    compile ('com.cocoahero.android:geojson:1.0.0@aar'){
 //        transitive=true
 //    }
-    compile "com.android.support:appcompat-v7:23.0.0"
+    compile "com.android.support:appcompat-v7:23.1.1"
 }
 
 android {
     compileSdkVersion 23
     buildToolsVersion "23.0.1"
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_7
+        targetCompatibility JavaVersion.VERSION_1_7
+    }
 
     defaultConfig {
         minSdkVersion 16
