--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,7 @@ apply plugin: 'com.android.application'
 
 repositories {
     mavenCentral()
+    jcenter()
 }
 
 dependencies {
@@ -20,6 +21,8 @@ dependencies {
 //        transitive=true
 //    }
     compile "com.android.support:appcompat-v7:23.1.1"
+    compile 'eu.chainfire:libsuperuser:1.0.0.+'
+
 }
 
 android {
