--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.1'
+        classpath 'com.android.tools.build:gradle:2.3.3'
     }
 }
 apply plugin: 'com.android.application'
@@ -13,6 +13,15 @@ repositories {
     jcenter()
 }
 
+allprojects {
+    repositories {
+        jcenter()
+        maven {
+            url "https://maven.google.com"
+        }
+    }
+}
+
 dependencies {
 //    compile ('com.mapbox.mapboxsdk:mapbox-android-sdk:0.5.1@aar'){
 //        transitive=true
@@ -20,13 +29,13 @@ dependencies {
 //    compile ('com.cocoahero.android:geojson:1.0.0@aar'){
 //        transitive=true
 //    }
-    compile "com.android.support:appcompat-v7:25.3.1"
+    compile "com.android.support:appcompat-v7:25.4.0"
     compile 'eu.chainfire:libsuperuser:1.0.0.+'
 }
 
 android {
     compileSdkVersion 25
-    buildToolsVersion "25.0.2"
+    buildToolsVersion "26.0.0"
 
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
