--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ buildscript {
         google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.1'
+        classpath 'com.android.tools.build:gradle:3.2.1'
     }
 }
 apply plugin: 'com.android.application'
@@ -30,14 +30,14 @@ dependencies {
     //    compile ('com.cocoahero.android:geojson:1.0.0@aar'){
     //        transitive=true
     //    }
-    compile 'com.android.support:appcompat-v7:27.0.2'
-    compile 'eu.chainfire:libsuperuser:1.0.0.+'
-    compile 'com.android.support:design:27.0.2'
+    implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation 'eu.chainfire:libsuperuser:1.0.0.+'
+    implementation 'com.android.support:design:28.0.0'
 }
 
 android {
-    compileSdkVersion 27
-    buildToolsVersion '27.0.2'
+    compileSdkVersion 28
+    buildToolsVersion '28.0.3'
 
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
@@ -46,7 +46,7 @@ android {
 
     defaultConfig {
         minSdkVersion 17
-        targetSdkVersion 27
+        targetSdkVersion 28
         versionCode 12
         vectorDrawables.useSupportLibrary = true
         //jackOptions {
@@ -64,6 +64,6 @@ android {
             assets.srcDirs = ['assets']
         }
 
-        instrumentTest.setRoot('tests')
+        // instrumentTest.setRoot('tests')
     }
 }
