--- a/build.gradle
+++ b/build.gradle
@@ -30,9 +30,9 @@ dependencies {
     //    compile ('com.cocoahero.android:geojson:1.0.0@aar'){
     //        transitive=true
     //    }
-    implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation 'androidx.appcompat:appcompat:1.0.0'
     implementation 'eu.chainfire:libsuperuser:1.0.0.+'
-    implementation 'com.android.support:design:28.0.0'
+    implementation 'com.google.android.material:material:1.0.0'
 }
 
 android {
