Move data classes to new Kotlin file

--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,7 @@ buildscript {
 }
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
 
 repositories {
     mavenCentral()
@@ -72,4 +73,8 @@ android {
 
         // instrumentTest.setRoot('tests')
     }
+}
+
+androidExtensions {
+    experimental = true
 }
