--- a/build.gradle
+++ b/build.gradle
@@ -56,6 +56,7 @@ android {
         targetSdkVersion 28
         versionCode 12
         vectorDrawables.useSupportLibrary = true
+        resConfigs 'en-rUS', 'fr'
         //jackOptions {
         //    enabled true
         //}
