--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -26,7 +26,8 @@
         android:label="@string/app_name" >
         <activity
             android:name="com.lordsutch.android.signaldetector.SignalDetector"
-            android:label="@string/app_name" android:launchMode="singleTask">
+            android:label="@string/app_name" android:launchMode="singleTask"
+            android:theme="@style/Theme.SignalDetectorTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -36,6 +37,7 @@
         </activity>
         
         <activity
+            android:theme="@style/Theme.SignalDetectorTheme"
             android:name=".SettingsActivity"
             android:label="@string/title_activity_settings"
             android:parentActivityName="com.lordsutch.android.signaldetector.SignalDetector">
