--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -82,5 +82,10 @@
             android:name="com.sec.android.multiwindow.MINIMUM_SIZE_H"
             android:value="598.0dip" />
 
+        <meta-data android:name="com.samsung.android.sdk.multiwindow.enable" android:value="true"/>
+        <meta-data android:name="android.intent.category.MULTIWINDOW_LAUNCHER" android:value="true"/>
+        <meta-data android:name="com.sec.android.intent.category.MULTIWINDOW_LAUNCHER" android:value="true"/>
+        <meta-data android:name="com.lge.support.SPLIT_WINDOW" android:value="true"/>
+
     </application>
 </manifest>
